[gd_scene load_steps=81 format=2]

[ext_resource path="res://Resources/Player/Hurt-Effect/Warrior_hurt_4.png" type="Texture" id=1]
[ext_resource path="res://Resources/Player/Jump/Warrior_Jump_1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Player/Jump/Warrior_Jump_2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Player/Jump/Warrior_Jump_3.png" type="Texture" id=4]
[ext_resource path="res://Resources/Player/Hurt-Effect/Warrior_hurt_1.png" type="Texture" id=5]
[ext_resource path="res://Resources/Player/Dash/Warrior_Dash_3.png" type="Texture" id=6]
[ext_resource path="res://Resources/Player/Dash/Warrior_Dash_4.png" type="Texture" id=7]
[ext_resource path="res://Resources/Player/Dash/Warrior_Dash_5.png" type="Texture" id=8]
[ext_resource path="res://Resources/Player/Dash/Warrior_Dash_6.png" type="Texture" id=9]
[ext_resource path="res://Resources/Player/Run/Warrior_Run_1.png" type="Texture" id=10]
[ext_resource path="res://Resources/Player/Run/Warrior_Run_3.png" type="Texture" id=11]
[ext_resource path="res://Resources/Player/Run/Warrior_Run_2.png" type="Texture" id=12]
[ext_resource path="res://Resources/Player/Run/Warrior_Run_4.png" type="Texture" id=13]
[ext_resource path="res://Resources/Player/Run/Warrior_Run_5.png" type="Texture" id=14]
[ext_resource path="res://Resources/Player/Hurt-Effect/Warrior_hurt_3.png" type="Texture" id=15]
[ext_resource path="res://Resources/Player/Dash/Warrior_Dash_7.png" type="Texture" id=16]
[ext_resource path="res://Resources/Player/Hurt-Effect/Warrior_hurt_2.png" type="Texture" id=17]
[ext_resource path="res://Resources/Player/Dash/Warrior_Dash_2.png" type="Texture" id=18]
[ext_resource path="res://Resources/Player/idle/Warrior_Idle_2.png" type="Texture" id=19]
[ext_resource path="res://Resources/Player/idle/Warrior_Idle_1.png" type="Texture" id=20]
[ext_resource path="res://Resources/Player/Dash/Warrior_Dash_1.png" type="Texture" id=21]
[ext_resource path="res://Resources/Player/idle/Warrior_Idle_3.png" type="Texture" id=22]
[ext_resource path="res://Resources/Player/idle/Warrior_Idle_4.png" type="Texture" id=23]
[ext_resource path="res://Resources/Player/idle/Warrior_Idle_5.png" type="Texture" id=24]
[ext_resource path="res://Resources/Player/Run/Warrior_Run_6.png" type="Texture" id=25]
[ext_resource path="res://Resources/Player/Run/Warrior_Run_7.png" type="Texture" id=26]
[ext_resource path="res://Resources/Player/Run/Warrior_Run_8.png" type="Texture" id=27]
[ext_resource path="res://Resources/Player/idle/Warrior_Idle_6.png" type="Texture" id=28]
[ext_resource path="res://Player/NewPlayerController.gd" type="Script" id=29]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_4.png" type="Texture" id=30]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_3.png" type="Texture" id=31]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_7.png" type="Texture" id=32]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_9.png" type="Texture" id=33]
[ext_resource path="res://Resources/Player/Fall/Warrior_Fall_2.png" type="Texture" id=34]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_1.png" type="Texture" id=35]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_2.png" type="Texture" id=36]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_5.png" type="Texture" id=37]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_6.png" type="Texture" id=38]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_8.png" type="Texture" id=39]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_10.png" type="Texture" id=40]
[ext_resource path="res://Resources/Player/Death-Effect/Warrior_Death_11.png" type="Texture" id=41]
[ext_resource path="res://Resources/Player/Fall/Warrior_Fall_3.png" type="Texture" id=42]
[ext_resource path="res://Resources/Player/Fall/Warrior_Fall_1.png" type="Texture" id=43]
[ext_resource path="res://Resources/Player/Crouch/Warrior_Crouch_4.png" type="Texture" id=44]
[ext_resource path="res://Resources/Player/Slide/Warrior-Slide_3.png" type="Texture" id=45]
[ext_resource path="res://Resources/Player/Slide/Warrior-Slide_2.png" type="Texture" id=46]
[ext_resource path="res://Resources/Player/Slide/Warrior-Slide_4.png" type="Texture" id=47]
[ext_resource path="res://Resources/Player/Slide/Warrior-Slide_5.png" type="Texture" id=48]
[ext_resource path="res://Resources/Player/Crouch/Warrior_Crouch_3.png" type="Texture" id=49]
[ext_resource path="res://Resources/Player/Slide/Warrior-Slide_1.png" type="Texture" id=50]
[ext_resource path="res://Resources/Player/Crouch/Warrior_Crouch_2.png" type="Texture" id=51]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_1.png" type="Texture" id=52]
[ext_resource path="res://Resources/Player/Crouch/Warrior_Crouch_5.png" type="Texture" id=53]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_12.png" type="Texture" id=54]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_2.png" type="Texture" id=55]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_3.png" type="Texture" id=56]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_4.png" type="Texture" id=57]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_5.png" type="Texture" id=58]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_6.png" type="Texture" id=59]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_7.png" type="Texture" id=60]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_8.png" type="Texture" id=61]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_9.png" type="Texture" id=62]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_10.png" type="Texture" id=63]
[ext_resource path="res://Resources/Player/Attack/Warrior_Attack_11.png" type="Texture" id=64]
[ext_resource path="res://Player/States/Idle.gd" type="Script" id=65]
[ext_resource path="res://Player/States.gd" type="Script" id=66]
[ext_resource path="res://Player/States/Jump.gd" type="Script" id=67]
[ext_resource path="res://Player/States/Run.gd" type="Script" id=68]
[ext_resource path="res://Player/States/Fall.gd" type="Script" id=69]
[ext_resource path="res://Player/States/Crouch.gd" type="Script" id=70]
[ext_resource path="res://Player/States/Slide.gd" type="Script" id=71]
[ext_resource path="res://Player/States/Dash.gd" type="Script" id=72]
[ext_resource path="res://Player/States/Attack1.gd" type="Script" id=73]
[ext_resource path="res://Player/States/Attack2.gd" type="Script" id=74]
[ext_resource path="res://Player/States/Attack3.gd" type="Script" id=75]
[ext_resource path="res://Player/States/Hurt.gd" type="Script" id=76]
[ext_resource path="res://Player/States/Die.gd" type="Script" id=77]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 32 ), ExtResource( 39 ), ExtResource( 33 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "die",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 1 ) ],
"loop": true,
"name": "hurt",
"speed": 8.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "attack1",
"speed": 14.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 18 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 16 ) ],
"loop": true,
"name": "dash",
"speed": 10.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 49 ), ExtResource( 44 ), ExtResource( 53 ) ],
"loop": true,
"name": "crouch",
"speed": 6.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 34 ), ExtResource( 42 ) ],
"loop": true,
"name": "fall",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 54 ) ],
"loop": true,
"name": "attack2",
"speed": 12.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 28 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": true,
"name": "slide",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.0
height = 14.0

[sub_resource type="GDScript" id=3]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 289, 164 )
script = ExtResource( 29 )
__meta__ = {
"_edit_group_": true
}

[node name="StateLabel" type="Label" parent="."]
margin_left = -24.0
margin_top = -26.0
margin_right = 16.0
margin_bottom = -12.0
text = "state"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -5, 5 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = 0
limit_bottom = 720
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.3
drag_margin_right = 0.3
editor_draw_limits = true
script = SubResource( 3 )

[node name="States" type="Node" parent="."]
script = ExtResource( 66 )

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 65 )

[node name="Run" type="Node" parent="States"]
script = ExtResource( 68 )

[node name="Jump" type="Node" parent="States"]
script = ExtResource( 67 )

[node name="Fall" type="Node" parent="States"]
script = ExtResource( 69 )

[node name="Attack1" type="Node" parent="States"]
script = ExtResource( 73 )

[node name="Attack2" type="Node" parent="States"]
script = ExtResource( 74 )

[node name="Attack3" type="Node" parent="States"]
script = ExtResource( 75 )

[node name="Crouch" type="Node" parent="States"]
script = ExtResource( 70 )

[node name="Slide" type="Node" parent="States"]
script = ExtResource( 71 )

[node name="Dash" type="Node" parent="States"]
script = ExtResource( 72 )

[node name="Hurt" type="Node" parent="States"]
script = ExtResource( 76 )

[node name="Die" type="Node" parent="States"]
script = ExtResource( 77 )

[node name="DashResetTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DashResetTimer" to="." method="_on_DashResetTimer_timeout"]
